Project

General

Profile

Actions

Bug #9935

closed

client: segfault on ceph_rmdir path "/"

Added by Noah Watkins over 9 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel, kraken
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

A segfault occurs when removing the root directory. What is the expected behavior? I think -EBUSY is what makes sense.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #18611: jewel: client: segfault on ceph_rmdir path "/"ResolvedNathan CutlerActions
Copied to CephFS - Backport #18612: kraken: client: segfault on ceph_rmdir path "/"ResolvedNathan CutlerActions
Actions #1

Updated by John Spray over 9 years ago

Yes, EBUSY is what a local filesystem gives you, so that sounds right to me.

Actions #2

Updated by Greg Farnum almost 8 years ago

  • Category set to Correctness/Safety
  • Component(FS) Client added
Actions #3

Updated by John Spray over 7 years ago

  • Status changed from Need More Info to In Progress
  • Assignee changed from Noah Watkins to Michal Jarzabek
Actions #4

Updated by Michal Jarzabek over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #5

Updated by John Spray over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to jewel, kraken
Actions #6

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18611: jewel: client: segfault on ceph_rmdir path "/" added
Actions #7

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18612: kraken: client: segfault on ceph_rmdir path "/" added
Actions #8

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF